--- a/templates/index.html
+++ b/templates/index.html
@@ -9,27 +9,21 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
-      crossorigin="anonymous"
-    /><!-- Anclaje con el Framework de BOOTSRAP-->
+      crossorigin="anonymous"/><!-- Anclaje con el Framework de BOOTSRAP-->
     <link
       rel="stylesheet"
-      href="{{ url_for('static', filename='css/style.css') }}"
-    /> <!-- Anclaje al archivo de estilos-->
+      href="{{ url_for('static', filename='css/style.css') }}"/> <!-- Anclaje al archivo de estilos-->
   </head>
   <body>
     <header><!-- Barra de navegacion y portada-->
-      <nav
-        class="navbar navbar-expand-lg navbar-light bg-light bg-dark navbar navbar-dark "
-      ><!-- estilo de la navegación-->
-
+      <nav class="navbar navbar-expand-lg navbar-light bg-light bg-dark navbar navbar-dark "><!-- estilo de la navegación-->
         <a class="navbar-brand" href="#">
           <img
             src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_branimir-balogovic-faiqrv7fge0-unsplash.jpg?v=1588692801974"
             class="rounded-circle"
             width="60"
             height="60"
-            alt=""
-          /><!-- Logo con atributos  (sin ruta)-->
+            alt="choque de puños médicos"/><!-- Logo con atributos  (sin ruta)-->
         </a>
         <ul>
           <!-- opciones de la navegación con rutas (internas)-->
@@ -45,8 +39,7 @@
 
       <div
         class="cover d-flex justify-content-center align-items-center flex-column"
-        style="background-image: url(https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_pills-on-blue-background-3936369.jpg?v=1589211449978);"
-      >
+        style="background-image: url(https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_pills-on-blue-background-3936369.jpg?v=1589211449978);">
         <!-- foto de portada -->
         <h3>La Pandemia del siglo 21</h3>
       </div>
@@ -60,8 +53,7 @@
               <img
                 src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_1cdc-w9keokhajkw-unsplash.jpg?v=1588691997173"
                 class="card-img card-img-top"
-                alt="foto ciencia"
-              />
+                alt="foto virus"/>
               <div class="card-body">
                 <h5 class="card-title">La Ciencia y el Corona Virus</h5>
                 <p class="card-text">
@@ -77,8 +69,7 @@
               <img
                 src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_jamie-street-tb5a-qti6xg-unsplash.jpg?v=1588692229998"
                 class=" card-img card-img-top"
-                alt="foto salud"
-              />
+                alt="foto salud"/>
               <div class="card-body">
                 <h5 class="card-title">Salud en casa</h5>
                 <p class="card-text">
@@ -94,8 +85,7 @@
               <img
                 src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_jessica-lewis-vi6szzwgc34-unsplash.jpg?v=1589333623353"
                 class="card-img card-img-top"
-                alt="foto lavamanos"
-              />
+                alt="foto lavamanos"/>
               <div class="card-body">
                 <h5 class="card-title">Información Útil</h5>
                 <p class="card-text">
@@ -111,8 +101,7 @@
               <img
                 src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_anastasiia-chepinska-obmbhmrc3pw-unsplash.jpg?v=1589731177849"
                 class="card-img card-img-top"
-                alt="foto ventanal"
-              />
+                alt="foto ventanal"/>
               <div class="card-body">
                 <h5 class="card-title">Aprender en casa</h5>
                 <p class="card-text">
