--- a/templates/informacionc.html
+++ b/templates/informacionc.html
@@ -9,27 +9,22 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
-      crossorigin="anonymous"
-    /><!-- Anclaje con el Framework de BOOTSRAP-->
+      crossorigin="anonymous"/><!-- Anclaje con el Framework de BOOTSRAP-->
     <link
       rel="stylesheet"
-      href="{{ url_for('static', filename='css/style.css') }}"
-    /><!-- Anclaje al archivo de estilos-->
+      href="{{ url_for('static', filename='css/style.css') }}"/><!-- Anclaje al archivo de estilos-->
   </head>
   <body>
     <header><!-- Barra de navegacion y portada-->
       <nav
-        class="navbar navbar-expand-lg navbar-light bg-light bg-dark navbar navbar-dark "
-      >
-        <!--estilo barra navegación-->
+        class="navbar navbar-expand-lg navbar-light bg-light bg-dark navbar navbar-dark "><!--estilo barra navegación-->
         <a class="navbar-brand" href="#">
           <img
             src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_branimir-balogovic-faiqrv7fge0-unsplash.jpg?v=1588692801974"
             class="rounded-circle"
             width="60"
             height="60"
-            alt=""
-          /><!--logo con atributos (sin ruta)-->
+            alt="choque de puños médicos"/><!--logo con atributos (sin ruta)-->
         </a>
         <ul>
           <!--opciones de la navegacion con rutas(internas)-->
@@ -44,8 +39,7 @@
 
       <div
         class="cover d-flex justify-content-center align-items-center flex-column"
-        style="background-image: url(https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_1cdc-w9keokhajkw-unsplash.jpg?v=1588691997173);"
-      >
+        style="background-image: url(https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_1cdc-w9keokhajkw-unsplash.jpg?v=1588691997173);">
         <h1>
           La Ciencia VS Corona-Virus
         </h1>
@@ -128,14 +122,13 @@
       </dl>
     </div>
 
-    <!-- Imágenes centradas con atributo-->
+    <!-- Imágenes ordenadas-->
     <div style="float:left;width:50%;">
       <div style="padding-right:10px;">
         <div class="text-center">
           <img
             src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_cdc-linionbajm4-unsplash_1.jpg?v=1589478553383"
-            class="img-thumbnail rounded"
-          />
+            class="img-thumbnail rounded"/>
         </div>
       </div>
     </div>
@@ -145,12 +138,10 @@
         <div class="text-center">
           <img
             src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_fusion-medical-animation-rnr8d3fnuny-unsplash.jpg?v=1589478967364"
-            class="img-thumbnail rounded"
-          />
+            class="img-thumbnail rounded" />
         </div>
       </div>
     </div>
-
     <div style="clear: both;"></div>
 
     <div class="indexcards"><!--Introducción 2 -->
