--- a/templates/psico.html
+++ b/templates/psico.html
@@ -9,13 +9,10 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
-      crossorigin="anonymous"
-    /><!-- Anclaje con el Framework de BOOTSRAP-->
-
+      crossorigin="anonymous"/><!-- Anclaje con el Framework de BOOTSRAP-->
     <link
       rel="stylesheet"
-      href="{{ url_for('static', filename='css/style.css') }}"
-    /><!-- Anclaje al archivo de estilos-->
+      href="{{ url_for('static', filename='css/style.css') }}" /><!-- Anclaje al archivo de estilos-->
   </head>
   <body>
     <header><!-- Barra de navegacion y portada-->
@@ -28,8 +25,7 @@
             class="rounded-circle"
             width="60"
             height="60"
-            alt=""
-          /><!-- Logo con atributos (sin ruta)-->
+            alt="choque de puños médicos"/><!-- Logo con atributos (sin ruta)-->
         </a>
         <ul>
           <!-- opciones de la navegación con rutas (internas)-->
