--- a/templates/aprendizaje.html
+++ b/templates/aprendizaje.html
@@ -9,26 +9,22 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
-      crossorigin="anonymous"
-    /><!-- Anclaje con el Framework de BOOTSRAP-->
+      crossorigin="anonymous"/><!-- Anclaje con el Framework de BOOTSRAP-->
     <link
       rel="stylesheet"
-      href="{{ url_for('static', filename='css/style.css') }}"
-    /><!-- Anclaje al archivo de estilos-->
+      href="{{ url_for('static', filename='css/style.css') }}"/><!-- Anclaje al archivo de estilos-->
   </head>
   <body>
     <header><!-- Barra de navegacion y portada-->
       <nav
-        class="navbar navbar-expand-lg navbar-light bg-light bg-dark navbar navbar-dark "
-      ><!-- estilo de la navegación-->
+        class="navbar navbar-expand-lg navbar-light bg-light bg-dark navbar navbar-dark "><!-- estilo de la navegación-->
         <a class="navbar-brand" href="#">
           <img
             src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_branimir-balogovic-faiqrv7fge0-unsplash.jpg?v=1588692801974"
             class="rounded-circle"
             width="60"
             height="60"
-            alt=""
-          /><!-- Logo con atributos  (sin ruta)-->
+            alt="choque de puños médicos"/><!-- Logo con atributos  (sin ruta)-->
         </a>
         <ul>
           <!-- opciones de la navegación con rutas (interiores)-->
