--- a/templates/informacionc.html
+++ b/templates/informacionc.html
@@ -190,7 +190,7 @@
           <div class="media-body">
             <h5 class="mt-0 mb-1">Bibloteca Nacional de Medicina de EEUU</h5>
 
-            <a href="https://www.paho.org/es" class="btn btn-dark">Ir</a>
+            <a href="https://www.nlm.nih.gov/" class="btn btn-dark">Ir</a>
           </div>
         </li>
         <li class="media my-4">
