--- a/templates/manualp.html
+++ b/templates/manualp.html
@@ -9,12 +9,10 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
-      crossorigin="anonymous"
-    /><!-- Anclaje con el Framework de BOOTSRAP-->
+      crossorigin="anonymous"/><!-- Anclaje con el Framework de BOOTSRAP-->
     <link
       rel="stylesheet"
-      href="{{ url_for('static', filename='css/style.css') }}"
-    /><!-- Anclaje al archivo de estilos-->
+      href="{{ url_for('static', filename='css/style.css') }}"/><!-- Anclaje al archivo de estilos-->
   </head>
   <body>
     <header><!-- Barra de navegacion y portada-->
@@ -27,8 +25,7 @@
             class="rounded-circle"
             width="60"
             height="60"
-            alt=""
-          /><!-- Logo con atributos (sin ruta)-->
+            alt="choque de puños médicos"/><!-- Logo con atributos (sin ruta)-->
         </a>
         <ul>
           <!-- opciones de la navegación con rutas (interiores)-->
@@ -66,31 +63,31 @@
         crollamount="8"><!-- propiedades de la corredera -->
         <img
           src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Fmm.jpg?v=1589393718590"
-          class="traino img-thumbnail rounded"
+          class="img-thumbnail rounded"
           width="500"
           height="500"
         />
         <img
           src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Fmm1.jpg?v=1589393930468"
-          class="traino img-thumbnail rounded"
+          class="img-thumbnail rounded"
           width="500"
           height="500"
         />
         <img
           src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2F97389003_10157266503798161_2023864915739017216_o.jpg?v=1589802547431"
-          class="traino img-thumbnail rounded"
+          class="img-thumbnail rounded"
           width="500"
           height="500"
         />
         <img
           src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Fmm2.jpg?v=1589393979368"
-          class="traino img-thumbnail rounded"
+          class="img-thumbnail rounded"
           width="500"
           height="500"
         />
         <img
           src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Fmm4.jpg?v=1589395841570"
-          class="traino img-thumbnail rounded"
+          class="img-thumbnail rounded"
           width="500"
           height="500"
         />
@@ -143,7 +140,8 @@
           class="img-thumbnail rounded"
           width="500"
           height="500"
-        /> </marquee
+        /> 
+      </marquee
       ><!-- Todas las imagenes con el mismo estilo(borde redondeado blanco) -->
     </section>
 
